Edit about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,6 +15,7 @@
     <li> Name: Joohoon</li>
     <li> Age: 26</li>
   </ul>
+  <p>This site was created by me. It uses data from mapbox.com and weatherstack.com</p>
   {{>footer}}
 </body>
 
